<resources>
    <string name="app_name">Dicoding Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finished_event">Finished</string>
    <string name="upcoming_event">Upcoming</string>
    <string name="eventOwnerName">Owner name</string>
    <string name="eventDate">Date</string>
    <string name="eventSpaceLeft">Available seats</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="search_here">Search here…</string>
    <string name="settings">Settings</string>
    <string name="mode">Mode</string>
    <string name="dark_mode">Dark mode</string>
    <string name="general">General</string>
    <string name="notification">Enable notifications</string>
    <string name="error_message">Something went wrong</string>
    <string name="save_favourite">Save Favourite\n</string>
    <string name="favourie">Favourite</string>
    <string name="permission_success">Notification permission granted</string>
    <string name="permission_fail">Notification permission rejected</string>
    <string name="image_logo">Image</string>
    <string name="empty_fav">You do not have a favourite event</string>
</resources>