<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_finished_events"
        android:icon="@drawable/finished_event"
        android:title="@string/finished_event" />

    <item
        android:id="@+id/navigation_upcoming_events"
        android:icon="@drawable/upcoming_event"
        android:title="@string/upcoming_event" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_bookmark_black"
        android:title="@string/favourie" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />

</menu>