<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.detail_events.DetailEventActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="48dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="TODO" />

            <TextView
                android:id="@+id/tvEventName"
                style="@style/TextviewDetailEvent"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="Name Event" />

            <TextView
                style="@style/TextviewDetailEvent"
                android:text="@string/eventOwnerName" />

            <TextView
                android:id="@+id/tvEventOwnerName"
                style="@style/TextviewDetailEvent"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                tools:text="Abdi Setyawan" />

            <TextView
                style="@style/TextviewDetailEvent"
                android:text="@string/eventDate" />

            <TextView
                android:id="@+id/tvEventDate"
                style="@style/TextviewDetailEvent"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                tools:text="January 2080" />

            <TextView
                style="@style/TextviewDetailEvent"
                android:text="@string/eventSpaceLeft" />

            <TextView
                android:id="@+id/tvEventAvailableSeats"
                style="@style/TextviewDetailEvent"
                android:layout_marginBottom="8dp"
                android:textStyle="bold"
                tools:text="777" />

            <TextView
                android:id="@+id/tvEventDescription"
                style="@style/TextviewDetailEvent"
                android:layout_marginBottom="8dp"
                tools:text="Deadpool" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:padding="8dp"
        android:id="@+id/btnRegister"
        style="?attr/appBarLayoutStyle"
        android:layout_gravity="bottom"
        android:layout_width="300dp"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/register" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_button"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_unbookmarked"
        android:contentDescription="@string/favourie"
        style="?attr/floatingActionButtonStyle"
        app:elevation="0dp"
        app:pressedTranslationZ="0dp" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
</FrameLayout>
